--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@specy/liquid-glass-react": "^1.0.2",
     "@tailwindcss/vite": "^4.1.11",
+    "@xstate/store": "^3.8.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
