--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dotlists",
+  "name": "dotlist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-
+    "@auth/core": "^0.37.0",
+    "@convex-dev/auth": "^0.0.87",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-slot": "^1.2.3",
     "@specy/liquid-glass-react": "^1.0.2",
@@ -19,10 +20,6 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-
-    "@auth/core": "^0.37.0",
-    "@convex-dev/auth": "^0.0.87",
-
     "convex": "^1.25.4",
     "framer-motion": "^12.23.6",
     "liquid-glass-react": "^1.1.1",
