--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@convex-dev/auth": "^0.0.87",
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@specy/liquid-glass-react": "^1.0.2",
     "@tailwindcss/vite": "^4.1.11",
@@ -28,6 +29,7 @@
     "otpauth": "^9.4.0",
     "package-lock.json": "^1.0.0",
     "react": "^19.1.0",
+    "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
