--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "clsx": "^2.1.1",
     "convex": "^1.25.4",
     "framer-motion": "^12.23.6",
+    "frappe-gantt": "^1.0.3",
+    "jspdf": "^3.0.1",
     "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.525.0",
     "otpauth": "^9.4.0",
@@ -39,6 +41,7 @@
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@types/bcrypt": "^6.0.0",
+    "@types/frappe-gantt": "^0.9.0",
     "@types/node": "^24.0.15",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
