--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "convex": "^1.25.4",
     "framer-motion": "^12.23.6",
     "frappe-gantt": "^1.0.3",
+    "jose": "^6.0.12",
     "jspdf": "^3.0.1",
     "liquid-glass-react": "^1.1.1",
     "lucide-react": "^0.525.0",
