--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@convex-dev/auth": "^0.0.87",
     "@google/generative-ai": "^0.24.1",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@specy/liquid-glass-react": "^1.0.2",
     "@tailwindcss/vite": "^4.1.11",
     "@xstate/store": "^3.8.2",
