--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/core": "^0.40.0",
     "@convex-dev/auth": "^0.0.87",
     "@google/generative-ai": "^0.24.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
