--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "wouter": "^3.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
